--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -28,8 +28,13 @@
             <div class="navbar-end">
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a href="{% url 'signup' %}" class="button is-success">Sign up</a>
-                        <a class="button is-light">Log in</a>
+                        {% if request.user.is_authenticated %}
+                            <a href="{% url 'logout' %}" class="button is-danger">Log out</a>
+
+                        {% else %}
+                            <a href="{% url 'signup' %}" class="button is-success">Sign up</a>
+                            <a class="button is-light">Log in</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
