--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -33,7 +33,7 @@
 
                         {% else %}
                             <a href="{% url 'signup' %}" class="button is-success">Sign up</a>
-                            <a class="button is-light">Log in</a>
+                            <a href="{% url 'login' %}" class="button is-light">Log in</a>
                         {% endif %}
                     </div>
                 </div>
