--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -26,6 +26,10 @@
 
         <div class="navbar-menu">
             <div class="navbar-end">
+                {% if request.user.is_authenticated %}
+                    <a href="{% url 'feed' %}" class="navbar-item">Feed</a>
+
+                {% endif %}
                 <div class="navbar-item">
                     <div class="buttons">
                         {% if request.user.is_authenticated %}
