--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+{% load static %}
+
 <html lang="en">
 <head>
     <!-- Meta -->
@@ -10,6 +13,8 @@
 
     <!-- Style -->
     <link rel="Stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+    <link rel="Stylesheet" href="{% static 'css/main.css' %}">
+
 </head>
 <body>
     <!-- Nav -->
@@ -52,5 +57,13 @@
         {% endblock %}
     </section>
     <!-- End Content -->
+
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    {% block script %}
+    {% endblock %}
+
+    <!-- Scripts -->
+
 </body>
 </html>
