--- a/templates/feed/feed.html
+++ b/templates/feed/feed.html
@@ -1,11 +1,52 @@
 {% extends 'core/base.html' %}
 
 {% block content%}
-    <div class="container">
+    <div class="container" id="feedapp">
         <div class="column">
             <div class="column is-12">
-                <h1 class="title">My feed</h1>
+{#                <h1 class="title">My feed</h1>#}
+                <div class="wrapper-form">
+                    <form v-on:submit.prevent="submitcik()">
+                        <div class="field">
+                            <div class="control">
+                                <textarea class="textarea" v-model="body" placeholder="Ne cikleyeceksin?"></textarea>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <div class="control">
+                                <button class="button is-success">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+                <div class="wrapper-ciks">
+                    <div class="cik" v-for="cik in ciks">
+                        <p>[[ cik.body ]]</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+{% endblock %}
+
+
+{% block script %}
+    <script>
+        new Vue({
+            el: '#feedapp',
+            delimeters: ['[[', ']]'],
+            data (){
+                return {
+                    ciks: [],
+                    body: ''
+                }
+            },
+            methods: {
+                submitcik() {
+                    console.log('submitcik');
+                }
+            }
+        })
+    </script>
 {% endblock %}
