--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,19 @@
 body {
     background: #f9f9f9;
 }
+.wrapper-ciks {
+    margin-top: 30px;
+}
+.wrapper-ciks .cik {
+    margin-bottom: 10px;
+    padding: 20px;
+    border-radius: 4px;
+    background: white;
+}
+.wrapper-ciks .cik .name {
+    font-weight: bold;
+}
+.wrapper-ciks .cik .info {
+    font-size: 12px;
+    color: #aaa;
+}
