--- a/templates/feed/feed.html
+++ b/templates/feed/feed.html
@@ -1,5 +1,6 @@
 {% extends 'core/base.html' %}
 
+{% load humanize %}
 {% block content%}
     <div class="container" id="feedapp">
         <div class="column">
@@ -21,19 +22,22 @@
                 </div>
 
                 <div class="wrapper-ciks">
-                    {% for cik in ciks %}
-                        <div class="cik">
-                            <p class="name">{{ cik.created_by.username }}</p>
-                            <p>{{ cik.body }}</p>
-                            <p class="info"> {{ cik.created_at }}</p>
-                        </div>
-                    {% endfor %}
 
                     <div class="cik" v-for="cik in ciks">
                         <p class="name">[[ cik.user ]]</p>
                         <p>[[ cik.body ]]</p>
                         <p class="info">[[ cik.created_at ]]</p>
                     </div>
+
+                    {% for cik in ciks %}
+                        <div class="cik">
+                            <p class="name">{{ cik.created_by.username }}</p>
+                            <p>{{ cik.body }}</p>
+                            <p class="info"> {{ cik.created_at | naturalday  }}</p>
+                        </div>
+                    {% endfor %}
+
+
                 </div>
             </div>
         </div>
