--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -12,7 +12,11 @@
                 <p>Follows: {{ user.userprofile.follows.count }}</p>
 
                 {% if user != request.user %}
-                    <a href="{% url 'follow_user' user.username %}" class="button is-success">Follow</a>
+                    {% if request.user.userprofile in user.userprofile.followed_by.all %}
+                        <a href="{% url 'unfollow_user' user.username %}" class="button is-success">Unfollow</a>
+                    {% else %}
+                        <a href="{% url 'follow_user' user.username %}" class="button is-success">Follow</a>
+                    {% endif %}
                 {% endif %}
             </div>
         </div>
