--- a/templates/feed/feed.html
+++ b/templates/feed/feed.html
@@ -60,6 +60,10 @@
                                             <small>{{ cik.created_at|naturaltime }}</small>
                                             <br>
                                             {{ cik.body }}
+                                            <br>
+                                            <a @click="likeCik({{ cik.id }})" v-if = "!liked_ciks.includes({{ cik.id }})">Like</a>
+                                            <span v-if="liked_ciks.includes({{ cik.id }})">Liked</span>
+                                            <small id="likes-{{ cik.id }}">{{ cik.likes.count }} likes</small>
                                         </p>
                                     </div>
                                 </div>
@@ -86,10 +90,36 @@
                     body: '',
                     user: '{{ request.user.username }}',
                     created_at: 'Now',
-                    avatar: '{% if request.user.userprofile.avatar %}{{ request.user.userprofile.avatar.url }}{% endif %}'
+                    avatar: '{% if request.user.userprofile.avatar %}{{ request.user.userprofile.avatar.url }}{% endif %}',
+                    liked_ciks: [{% for cik in ciks %}{% if cik.liked %}{{ cik.id }},{% endif %}{% endfor %}]
                 }
             },
             methods: {
+                likeCik(cik_id) {
+                    this.liked_ciks.push(parseInt(cik_id))
+
+                    var cik = {
+                        'cik_id':cik_id
+                    };
+                    fetch('/api/add_like/', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                            'X-CSRFToken': '{{ csrf_token }}'
+                        },
+                        credentials: 'same-origin',
+                        body: JSON.stringify(cik)
+                        })
+                        .then((response) => {
+                        console.log(response);
+                        })
+                        .catch((error) => {
+                        console.log(error);})
+
+                        const el = document.getElementById('likes-'+ cik_id);
+                        const likes = parseInt(el.innerHTML.split(' ')[0])
+                        el.innerHTML = likes + ' likes';
+                },
                 submitcik(){
                     console.log('submitcik');
                     if (this.body.length > 0 ) {
