context has ciks

--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -30,7 +30,7 @@
         <div class="columns">
             <div class="column is-8">
                 <div class="wrapper-ciks">
-                    {% for cik in user.ciks.all %}
+                    {% for cik in ciks %}
                         <div class="cik">
                             <article class="media">
                                 <figure class="media-left">
