--- a/templates/userprofile/userprofile.html
+++ b/templates/userprofile/userprofile.html
@@ -3,7 +3,7 @@
 {% load humanize %}
 
 {% block content %}
-    <div class="container">
+    <div class="container" id="userprofileapp">
         <div class="columns">
             <div class="column is-12">
                 <h1 class="title">{{ user.username }}</h1>
@@ -47,6 +47,11 @@
                                             <small>{{ cik.created_at|naturaltime }}</small>
                                             <br>
                                             {{ cik.body }}
+                                            <br>
+                                            <a @click="likeCik({{ cik.id }})" v-if = "!liked_ciks.includes({{ cik.id }})">Like</a>
+                                            <span v-if="liked_ciks.includes({{ cik.id }})">Liked</span>
+                                            <small id="likes-{{ cik.id }}">{{ cik.likes.count }} likes</small>
+
                                         </p>
                                     </div>
                                 </div>
@@ -59,7 +64,44 @@
     </div>
 {% endblock %}
 
+{% block script %}
+    <script>
+        new Vue({
+            el: '#userprofileapp',
+            delimiters: ['[[', ']]'],
+            data () {
+                return {
+                    liked_ciks: [{% for cik in ciks %}{% if cik.liked %}{{ cik.id }},{% endif %}{% endfor %}]
+                }
+            },
+            methods: {
+                likeCik(cik_id) {
+                    this.liked_ciks.push(parseInt(cik_id))
 
+                    var cik = {
+                        'cik_id':cik_id
+                    };
+                    fetch('/api/add_like/', {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json',
+                            'X-CSRFToken': '{{ csrf_token }}'
+                        },
+                        credentials: 'same-origin',
+                        body: JSON.stringify(cik)
+                        })
+                        .then((response) => {
+                        console.log(response);
+                        })
+                        .catch((error) => {
+                        console.log(error);});
 
+                        const el = document.getElementById('likes-' + cik_id);
+                        const likes = parseInt(el.innerHTML.split(' ')[0] + 1);
+                        el.innerHTML = likes + ' likes';
+                }
 
-
+            }
+        })
+    </script>
+{% endblock %}
