--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -35,7 +35,7 @@
                     <form method="get" action="{% url 'search' %}">
                         <div class="field has-addons">
                             <div class="control">
-                                <input type="text" class="input" placeholder="Serach" name="query">
+                                <input type="text" class="input" placeholder="Search" name="query">
                             </div>
                             <div class="control">
                                 <button class="button is-success">Search</button>
