--- a/templates/feed/search.html
+++ b/templates/feed/search.html
@@ -29,9 +29,47 @@
                     </div>
                 </form>
                 <div class="search-results">
-                    {% for user in users %}
-                        <p><a href="{% url 'userprofile' user.username %}">{{ user.username }}</a></p>
-                    {% endfor %}
+                    {% if not users and not ciks %}
+                        <p>No result</p>
+                    {% endif %}
+                    {% if users %}
+                        <strong>Users</strong>
+
+                        {% for user in users %}
+                            <p><a href="{% url 'userprofile' user.username %}">{{ user.username }}</a></p>
+                        {% endfor %}
+                    {% endif %}
+
+                    {% if ciks %}
+                        <strong>Ciks</strong>
+
+                        <div class="wrapper-ciks">
+                            {% for cik in ciks %}
+                                <div class="cik">
+                                    <article class="media">
+                                        <figure class="media-left">
+                                            <p class="image is-64x64">
+                                                {% if cik.created_by.userprofile.avatar %}
+                                                    <img src="{{ cik.created_by.userprofile.avatar.url }}">
+                                                {% endif %}
+                                            </p>
+                                        </figure>
+                                        <div class="media-content">
+                                            <div class="content">
+                                                <p>
+                                                    <strong><a href="{% url 'userprofile' cik.created_by.username %}"> {{ cik.created_by.username }}</a></strong>
+                                                    <small>{{ cik.created_at|naturaltime }}</small>
+                                                    <br>
+                                                    {{ cik.body }}
+                                                    <br>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </article>
+                                </div>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
