--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -47,6 +47,7 @@
             <div class="navbar-end">
                 {% if request.user.is_authenticated %}
                     <a href="{% url 'feed' %}" class="navbar-item">Feed</a>
+                    <a href="{% url 'chats' %}" class="navbar-item">Chats</a>
                     <a href="{% url 'userprofile' request.user.username %}" class="navbar-item">Profile</a>
                     <a href="{% url 'edit_profile' %}" class="navbar-item">Edit profile</a>
                 {% endif %}
