chat added to url, added to link to user at chat html

--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -15,7 +15,7 @@
                                 <figure class="media-left">
                                     <p class="image is-64x64">
                                         {% if message.created_by.userprofile.avatar %}
-                                            <img src="{{ message.created_by.userproifle.avatar.url }}">
+                                            <img src="{{ message.created_by.userprofile.avatar.url }}">
                                             
                                         {% endif %}
                                     </p>
