--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,7 +4,8 @@ body {
 .wrapper-ciks {
     margin-top: 30px;
 }
-.wrapper-ciks .cik {
+.wrapper-ciks .cik,
+.notifications-wrapper .media{
     margin-bottom: 10px;
     padding: 20px;
     border-radius: 4px;
