--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -46,6 +46,7 @@
             </div>
             <div class="navbar-end">
                 {% if request.user.is_authenticated %}
+                    <a href="{% url 'notifications' %}" class="navbar-item">Notifications ({{ notifications.count }})</a>
                     <a href="{% url 'feed' %}" class="navbar-item">Feed</a>
                     <a href="{% url 'chats' %}" class="navbar-item">Chats</a>
                     <a href="{% url 'userprofile' request.user.username %}" class="navbar-item">Profile</a>
